[PORTTISK-898] minor table vertical align fixes

--- a/applications/paikkatietoikkuna.fi/full-map/css/overwritten.css
+++ b/applications/paikkatietoikkuna.fi/full-map/css/overwritten.css
@@ -5,6 +5,7 @@ input[type="text"] {
 
 table td {
 	text-align: left;
+	vertical-align: top;
 }
 
 table {
